Added Logout Page

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -9,11 +9,11 @@
 		<h1>Sign Up</h1>
 		<form action="/user" method="post">
 			<label>Full Name</label>
-			<input type="text" required name="name" />
-			<label>Email</label>
-			<input type="text" required name="email" />
+			<input type="text" required name="name" /><br />
+			<label>Email </label>
+			<input type="text" required name="email" /><br />
 			<label>Password</label>
-			<input type="text" required name="password" />
+			<input type="text" required name="password" /><br />
 			<button type="submit">Sign Up</button>
 		</form>
 	</body>
