--- a/views/home.ejs
+++ b/views/home.ejs
@@ -40,5 +40,10 @@
 			</table>
 			<% } %>
 		</div>
+		<div>
+			<form method="get" action="/logout">
+				<button type="submit">Logout</button>
+			</form>
+		</div>
 	</body>
 </html>
